--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,30 +18,13 @@
     {% include head-custom.html %}
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <ul>
-            <li class="fork"><a href="/" {% if page.url == "/" %}style="color: red;"{% endif %}>
-              Home
-            </a></li>
-            <li class="fork"><a href="{{ site.github.repository_url }}">View My GitHub</a></li>
-            <li class="fork"><a href="/about" {% if page.url == "/about/" %}style="color: red;"{% endif %}>
-              About
-            </a></li>
-            {% if site.show_downloads %}
-              <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
-              <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
-              <li class="title">DOWNLOADS</li>
-            {% endif %}
-          </ul>
-        </nav>
-      </div><!-- end header -->
+    {% include header_menu.html %}
 
     <div class="wrapper">
 
       <section>
         <div id="title">
-            <h1>{{ site.title | default: site.github.repository_name }}</h1>
+            <h1>{{ page.url | default: site.github.repository_name }}</h1>
             <hr>
         </div>
         
