--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,24 +18,7 @@
     {% include head-custom.html %}
 </head>
 <body>
-      <div id="header">
-          <nav>
-          <ul>
-            <li class="fork"><a href="/" {% if page.url == "/" %}style="color: red;"{% endif %}>
-                Home
-            </a></li>
-            <li class="fork"><a href="{{ site.github.repository_url }}">View My GitHub</a></li>
-            <li class="fork"><a href="/about" {% if page.url == "/about/" %}style="color: red;"{% endif %}>
-                About
-            </a></li>
-              {% if site.show_downloads %}
-              <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
-              <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
-              <li class="title">DOWNLOADS</li>
-              {% endif %}
-            </ul>
-        </nav>
-    </div><!-- end header -->
+    {% include header_menu.html %}
     
     <div class="wrapper">
         <section>
@@ -46,7 +29,7 @@
         {{ content }}
       </section>
     
-        
+      <h2 class="post-title">Latest posts:</h2>
       {%- if site.posts.size > 0 -%}
       {%- if page.list_title -%}
       <h2 class="post-list-heading">{{ page.list_title }}</h2>
@@ -61,9 +44,6 @@
                       {{ post.title | escape }}
                     </a>
                 </h3>
-                {%- if site.show_excerpts -%}
-                {{ post.excerpt }}
-                {%- endif -%}
             </li>
             {%- endfor -%}
         </ul>
