menu fix, new links in backlog post

--- a/_includes/header_menu.html
+++ b/_includes/header_menu.html
@@ -5,7 +5,7 @@
         Home
       </a></li>
       <li class="fork"><a href="/posts" {% if page.url == "/posts/" %}style="font-weight: bold;"{% endif %}>
-        Blog Posts
+        Posts
       </a></li>
       <li class="fork"><a href="/about" {% if page.url == "/about/" %}style="font-weight: bold;"{% endif %}>
         About
