justified post texts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,9 @@
 
       <section>
         <div id="title">
-            <h1>{{ page.url | default: site.github.repository_name }}</h1>
+            <h1>{{ page.title | default: site.github.repository_name }}</h1>
             <hr>
-        </div>
-        
+        </div>        
         {{ content }}
         
       </section>
