--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -153,6 +153,10 @@ dt {
   font-weight: normal;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
 .align-left {
   display: block;
   margin-left: auto;
