--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@
       {%- endif -%}
       <ul class="post-list">
           {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-          {%- for post in site.posts -%}
+          {%- for post in site.posts limit:4 -%}
           <li>
               <span class="post-meta">{{ post.date | date: date_format }}</span>
               <h3>
